[project]
name = "rsa-secure-comm"
version = "0.1.0"
description = "Secure Legal Document Communication using RSA"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pycryptodome",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
